# snake

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
apps/client/: package.json
apps/client-cra/: package.json
apps/client-next/: next.config.js  package.json  tailwind.config.js
apps/client-next/components/: SnakeGame.tsx
apps/client-next/hooks/: useSnakeGame.ts
apps/client-next/pages/: index.tsx
apps/client-remix/: package.json  tsconfig.json
apps/client-remix/app/: root.tsx
apps/client-remix/app/components/: SnakeGame.client.tsx
apps/client-remix/app/styles/: app.css
apps/client/app/: root.tsx
apps/client/app/components/: SnakeGame.client.tsx
apps/client/components/: SnakeGame.tsx
client/: package.json
client/app/components/: SnakeGame.client.tsx
client/app/routes/: index.tsx
src/: lib.rs  snake.rs
