[package]
name = "snake-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0"
js-sys = "0"

[dependencies.web-sys]
version = "0"
features = [ "Window", "Document", "Element", "HtmlElement", "HtmlDivElement", "CssStyleDeclaration", "KeyboardEvent", "console" ]